--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tui = "0.18.0"
+anyhow = "1.0.57"
 crossterm = "0.23.2"
 rand = "0.8.5"
+tui = "0.18.0"
